Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: maybe implement a default message channel, very much like Erlang's
      actor model (which is cool in a lot of important aspects (failures!),
      but very lacking in others (higher level ipc)).
TODO: unready_all
TODO: myhttpd header parsing
TODO: channel->maxsize(newsize)?

	- clarify Coro::EV/Event/AnyEvent manpages: you have to actually run
          the event loop somewhere to be able to poll for events
          in the presence of ready threads.
	- speed up ready queue management/context switching by using a linked
          list instead of an array (~5-10%).
        - implement "watch" command in Coro::Debug shells.
        - for fun, implement time-slicing as an example in the manpage.

5.132 Fri May 29 09:00:39 CEST 2009
	- do not keep a reference to the argument itself in
          Coro::Semaphore::guard, as it could change later.
        - support SO_RCVBUF/SO_SNDBUF nonstandard Coro::Socket options,
          should support a prepare callback.

5.131 Mon Mar 16 23:20:37 CET 2009
	- implement and document Coro->suspend, Coro->resume.
        - fix Coro::Select implementation to not (often) close
          the passed file descriptors (testcase provided by pippijn).

5.13 Mon Dec 15 21:51:42 CET 2008
	- EXPERIMENTAL: implement dynamic winds (on_enter/on_leave).
	- don't set diehook to C<undef> but instead to NULL, to avoid
          spurious warnings.
        - fix a lot of bugs in Coro::SemaphoreSet.
        - Coro::SemaphoreSet will less often create a semaphore needlessly.
        - add Coro::SemaphoreSet::count and wait methods.
        - take advantage of the new Guard module.
        - deprecate Coro::guard.
        - try to fix the dreaded 01_unblock tests once more. I hate it when
          testsuites need more fixing than the code they are supposed to test.
        - croak in more cases when a required callback isn't resolvable.